[package]
name = "cilium_map_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bitflags = { version = "2.3.3" }
crossterm = "0.26.1"
libbpf-rs = "0.21.1"
libbpf-sys = "1.2.1"
plain = "0.2.3"
ratatui = "0.22.0"
tuitable = { path = "./tuitable" }
tuitable_derive = { path = "./tuitable_derive" }

[lib]
